Updated package name

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# data-structures-101 [![Build Status](https://travis-ci.org/globalroo/data-structures-101.svg?branch=master)](https://travis-ci.org/globalroo/data-structures-101)[![codecov](https://codecov.io/gh/globalroo/data-structures-101/branch/master/graph/badge.svg)](https://codecov.io/gh/globalroo/data-structures-101)
+# example-js-data-structures [![Build Status](https://travis-ci.org/globalroo/example-js-data-structures.svg?branch=master)](https://travis-ci.org/globalroo/example-js-data-structures)[![codecov](https://codecov.io/gh/globalroo/example-js-data-structures/branch/master/graph/badge.svg)](https://codecov.io/gh/globalroo/example-js-data-structures)
 
 > Example JS data structures
 
